--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <!-- scripts -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script type="text/javascript" src="app.js"></script>
-
+  <script type="text/javascript" src="https://platform.linkedin.com/badges/js/profile.js" async defer></script>
   <!-- favicon -->
   <link rel="icon" type="image/png" href="assets/imgs/favicon.png">
   <style>
@@ -50,6 +50,7 @@
   <section class="row" id="black">
       <div class="grid">
         <img src="assets/imgs/erick.jpg" alt="Erick" class="pic">
+        <div class="LI-profile-badge"  data-version="v1" data-size="medium" data-locale="en_US" data-type="horizontal" data-theme="dark" data-vanity="erickrecher"><a class="LI-simple-link" href='https://www.linkedin.com/in/erickrecher?trk=profile-badge'>Erick Recher</a></div>
         <h2>My Coding Journey</h2>
         <h4> I have gone a lot of different routes before becoming a web
           developer. A few of my friends were sysadmins, so I started
