--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
           So far, I have gone halfway through a CS degree, attended multiple bootcamp
           preps (Hack Reactor and App Academy), Hack Reactor SSP, worked
           through multiple coding websites, studied Linux/Unix,
-          Unix Shell scripting, Python, Ruby, Javascript, networking, and
+          Unix Shell scripting, Ruby, Javascript, networking, and
           then finally attended a coding bootcamp (General Assembly).
         </h4>
       </div>
