--- a/sites.html
+++ b/sites.html
@@ -105,12 +105,12 @@
           and I are working on turning it into a Facebook app.
           Deployed on Heroku.
         </h4>
-        <h2><a href="http://craftcolorist.com/">Colorist Website</a></h2>
+        <!-- <h2><a href="http://craftcolorist.com/">Colorist Website</a></h2>
         <h4> This is a website I created for a friend using godaddy, wordpress, and
           their website builder. I stylized and changed around their
           components. Simple and easy, was my first experience publishing
           a website for a friend.
-        </h4>
+        </h4> -->
       </div>
     </section>
 
